--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Generate Snake animation
-        uses: Platane/snk@master
+        uses: Platane/snk/svg-only@v4
         id: snake-gif
         with:
           github_user_name: mert-unl
