--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,17 +16,18 @@ jobs:
         uses: Platane/snk@v3
         with:
           github_user_name: mert-unl
-          outputs: dist  # Tüm dosyaları dist klasörüne kaydet
+          gif_out_path: dist/snake.gif
+          svg_out_path: dist/snake.svg
 
-      - name: Check git status
-        run: git status
+      - name: Check if files are generated
+        run: ls -la dist  # Dosyalar oluşmuş mu kontrol et
 
       - name: Push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Updated Snake Contribution Graph 🐍"
           branch: output
-          file_pattern: dist/github-contribution-grid-snake.*
+          file_pattern: dist/snake.*
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
@@ -36,3 +37,4 @@ jobs:
           clean: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
